--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "lit": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
+    "twilio": "^4.16.0",
+    "twilio-client": "^1.15.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -32,7 +36,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
+    "server": "node-env-run server --exec nodemon | pino-colada",
+    "dev": "run-p server start"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +58,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-pino-logger": "^7.0.0",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.2.2"
+  },
+  "proxy": "http://localhost:3001"
 }
