--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "lit": "^2.8.0",
     "react": "^18.2.0",
