--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lit": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.14.2",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
     "twilio": "^4.16.0",
