--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "cloudflared": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "lit": "^2.8.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
