--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudflared": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0",
     "lit": "^2.8.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
@@ -38,6 +39,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
